--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-this site is currently under development
+<!DOCTYPE html>
+<html>
+<title>Brain Storm Inc</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+
+</style>
+<body>
+<h1>This site is under development</h1>
+</body>
+</html>
