--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html>
-<title>Brain Storm Inc</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
+    <title>Brain Storm Inc</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <style>
 
-</style>
-<body>
-<h1>This site is under development</h1>
+    </style>
+
+    <body>
+        <h1>This site is under development</h1>
+    </body>
+
+</html>
+lopment</h1>
 </body>
+
 </html>
