--- a/index.html
+++ b/index.html
@@ -2,16 +2,15 @@
 <html>
     <title>Brain Storm Inc</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="/cdn/bulma/css/bulma.css">
+    <link rel="stylesheet" href="/css/styles.css">
     <style>
 
     </style>
 
     <body>
         <h1>This site is under development</h1>
+        <script src="/js/main.js" charset="utf-8"></script>
     </body>
-
-</html>
-lopment</h1>
-</body>
 
 </html>
