--- a/index.html
+++ b/index.html
@@ -3,13 +3,28 @@
     <title>Brain Storm Inc</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/cdn/bulma/css/bulma.css">
+    <link rel="stylesheet" href="/cdn/onepagescroll/onepagescroll.css">
+    <link rel="stylesheet" href="/cdn/squaremenu/square_menu.css">
     <link rel="stylesheet" href="/css/styles.css">
-    <style>
-
-    </style>
 
     <body>
-        <h1>This site is under development</h1>
+
+        <main class="main">
+            <section id="slideOne" class="hero">
+
+                <div id="SlideOneContent" class="hero-body container is-large">
+                    <h1 class="title is-1">Brain Storm Inc</h1>
+                    <h2 class="subtitle is-3">Desgin, Film, Develop.</h2>
+
+                </div>
+
+
+            </section>
+
+        </main>
+        <script src="/cdn/onepagescroll/onepagescroll.min.js" charset="utf-8"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <script src="/cdn/squaremenu/square_menu.min.js" charset="utf-8"></script>
         <script src="/js/main.js" charset="utf-8"></script>
     </body>
 
