--- a/index.html
+++ b/index.html
@@ -9,19 +9,32 @@
 <link rel="stylesheet" href="/css/styles.css">
 
 <body>
+  <div class="menu">
+    <nav class="left">
+      <a href="/">Home</a>
+      <a href="#about">About</a>
+      <a href="/clients">Clients</a>
+    </nav>
+    <nav class="right">
+      <a href="/showcase">Showcase</a>
+      <a href="/contact">Contact</a>
 
+    </nav>
+  </div>
   <main class="main">
     <section id="slideOne" class="hero">
 
       <div id="SlideOneContent" class="hero-body container is-large">
         <h1 data-aos="fade-up" class="title is-1">Brain Storm Inc</h1>
         <h2 data-aos="fade-up" class="subtitle is-3">Desgin, Film, Develop.</h2>
-
+        <button data-aos-delay="1000" data-aos-duration="1000" data-aos="fade-in" id="learnMore" class="button is-white is-outlined">Learn More</button>
       </div>
 
 
     </section>
-
+    <section>
+      <h1>about</h1>
+    </section>
   </main>
   <script src="/cdn/onepagescroll/onepagescroll.min.js" charset="utf-8"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
