--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
       <div id="SlideOneContent" class="hero-body container is-large">
         <h1 data-aos="fade-up" class="title is-1">Brain Storm Inc</h1>
-        <h2 data-aos="fade-up" class="subtitle is-3">Desgin, Film, Develop.</h2>
+        <h2 data-aos="fade-up" class="subtitle is-3">Design, Film, Develop.</h2>
 
       </div>
 
